--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.retrofit_version = '2.4.0'
+    ext.dagger2_version = '2.16'
+    ext.room_version = "2.2.3"
     repositories {
         google()
         jcenter()
@@ -13,6 +16,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
