--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".ui.activity.main.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoFullscreen"
+            >
         </activity>
         <activity
             android:name=".ui.activity.post.PostListActivity">
